--- a/gradle.properties
+++ b/gradle.properties
@@ -5,20 +5,21 @@ org.gradle.daemon=false
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=b1.7.3
-yarn_mappings=%s
+yarn_mappings=b1.7.3+e1fe071
 loader_version=0.15.6-babric.1
 
 # Mod Properties
 mod_version=1.0.0
-mod_id=%s
-maven_group=%s
-archives_base_name=%s
+mod_id=compass_coordination
+maven_group=io.github.yunivers
+archives_base_name=compass_coordination
 
 # Dependencies
-stationapi_version=%s
+stationapi_version=2.0.0-alpha.5.2
+regui_version=1.1.8
 
 # Extra Dependencies
-gcapi_version=%s
-glassnetworking_version=%s
-alwaysmoreitems_version=%s
-modmenu_version=%s
+gcapi_version=3.2.5
+glassnetworking_version=1.0.7
+alwaysmoreitems_version=1.7.0
+modmenu_version=1.8.5-beta.11
